--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#3772E7</color>
+    <color name="button_icon_text">#1A1B22</color>
+    <color name="settings">#AEAFB4</color>
 </resources>
