feat: реализовать ДЗ "Стили и темы"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,77 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/MainActivityLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingHorizontal="@dimen/main_activity_padding_start_end"
-    android:background="@color/background">
+    android:paddingHorizontal="@dimen/main_activity_padding_start_end">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title"
-
         android:layout_marginTop="14dp"
         android:textSize="@dimen/main_text_size"
-        android:textColor="@color/white"/>
+        android:fontFamily="@font/ys_display_medium"
+        android:textColor="@color/yp_white" />
 
     <Button
         android:id="@+id/button_search"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        style="@style/MainActivityButtonStyle"
         android:layout_marginTop="40dp"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
-        app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/search"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_margin_to_text"
-        app:iconTint="@color/button_icon_text"
-        android:text="@string/search"
-        android:textColor="@color/button_icon_text"
-        android:textSize="@dimen/main_text_size"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:foreground="?attr/selectableItemBackground" />
+        android:text="@string/search" />
 
     <Button
         android:id="@+id/button_media"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="@dimen/button_margin_top"
-        android:backgroundTint="@color/white"
-        app:cornerRadius="@dimen/button_corner_radius"
+        style="@style/MainActivityButtonStyle"
         app:icon="@drawable/media"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_margin_to_text"
-        app:iconTint="@color/button_icon_text"
-        android:text="@string/media"
-        android:textColor="@color/button_icon_text"
-        android:textSize="@dimen/main_text_size"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:foreground="?attr/selectableItemBackground" />
+        android:text="@string/media" />
 
     <Button
         android:id="@+id/button_settings"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="@dimen/button_margin_top"
+        style="@style/MainActivityButtonStyle"
         android:layout_marginBottom="28dp"
-        android:backgroundTint="@color/white"
-        app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/settings"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_margin_to_text"
-        app:iconTint="@color/button_icon_text"
-        android:text="@string/settings"
-        android:textColor="@color/button_icon_text"
-        android:textSize="@dimen/main_text_size"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:foreground="?attr/selectableItemBackground" />
+        android:text="@string/settings" />
 </LinearLayout>
