--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:text="@string/search"
         android:textSize="@dimen/main_text_size"
-        android:textColor="@color/button_icon_text"
+        android:textColor="@color/yp_black"
         android:layout_gravity="center" />
 
 </LinearLayout>
