feat: реализовать ДЗ "Context и Intent" и "EditText и TextWatcher"

--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -46,4 +46,8 @@
         <item name="colorControlActivated">@color/yp_blue</item>
     </style>
 
+    <style name="SearchEditTextStyle">
+        <item name="android:textColorHint">@color/yp_black</item>
+    </style>
+
 </resources>
