--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/back_arrow"
+        android:id="@+id/settings_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="-16dp"
@@ -32,6 +32,7 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/share_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -45,6 +46,7 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/sendToSupport_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -58,6 +60,7 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/userAgreement_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
