--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="yp_black">#1A1B22</color>
     <color name="yp_grey">#AEAFB4</color>
     <color name="yp_white">#FFFFFF</color>
+    <color name="yp_lightGrey">#E6E8EB</color>
 </resources>
