--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,10 +2,18 @@
 <resources>
     <dimen name="main_activity_padding_start_end">16dp</dimen>
     <dimen name="button_corner_radius">16dp</dimen>
-    <dimen name="button_margin_top">16dp</dimen>
+    <dimen name="margin_top">16dp</dimen>
     <dimen name="icon_margin_to_text">12dp</dimen>
     <dimen name="main_text_size">24sp</dimen>
     <dimen name="settings_padding_start_end">16dp</dimen>
     <dimen name="settings_padding_top_bottom">24dp</dimen>
     <dimen name="settings_text_size">16sp</dimen>
+    <dimen name="image_size">45dp</dimen>
+    <dimen name="image_margin_top_bottom">8dp</dimen>
+    <dimen name="recycler_view_padding_start_end">12dp</dimen>
+    <dimen name="track_card_element_margin">8dp</dimen>
+    <dimen name="track_card_text_margin">12dp</dimen>
+    <dimen name="track_title_text_size">16sp</dimen>
+    <dimen name="track_owner_time_size">11sp</dimen>
+    <dimen name="dot_margin_start_end">5dp</dimen>
 </resources>
