--- a/app/src/main/res/layout/track_card.xml
+++ b/app/src/main/res/layout/track_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/track_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -24,6 +25,7 @@
             style="@style/TrackTitleTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            tools:text="Track title"
             android:layout_marginTop="@dimen/track_card_text_margin"
             android:textSize="@dimen/track_title_text_size" />
 
@@ -37,6 +39,7 @@
                 style="@style/TrackTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                tools:text="Artist name"
                 android:textSize="@dimen/track_owner_time_size" />
 
             <ImageView
@@ -53,6 +56,7 @@
                 style="@style/TrackTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                tools:text="5:45"
                 android:textSize="@dimen/track_owner_time_size"/>
         </LinearLayout>
     </LinearLayout>
