--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:textColor="@color/yp_white" />
 
     <Button
-        android:id="@+id/button_search"
+        android:id="@+id/buttonSearch"
         style="@style/MainActivityButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -28,7 +28,7 @@
         android:text="@string/search" />
 
     <Button
-        android:id="@+id/button_media"
+        android:id="@+id/buttonMedia"
         style="@style/MainActivityButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -37,7 +37,7 @@
         android:text="@string/media" />
 
     <Button
-        android:id="@+id/button_settings"
+        android:id="@+id/buttonSettings"
         style="@style/MainActivityButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
