--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/settings_back_button"
+        android:id="@+id/settingsBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="-16dp"
@@ -32,7 +32,7 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/share_button"
+        android:id="@+id/shareButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -46,7 +46,7 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/sendToSupport_button"
+        android:id="@+id/sendToSupportButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -60,7 +60,7 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/userAgreement_button"
+        android:id="@+id/userAgreementButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
