--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,4 +57,12 @@
         <item name="android:textFontWeight" tools:targetApi="p">400</item>
         <item name="android:ellipsize">end</item>
     </style>
+
+    <style name="SearchPlaceholderTextStyle">
+        <item name="android:textColor">@color/yp_black</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textAlignment">center</item>
+    </style>
 </resources>
