fix: исправить замечания после ревью

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -31,8 +31,9 @@
             style="@style/SearchEditTextStyle"
             android:id="@+id/searchEditText"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/search_input_line"
             android:layout_weight="1"
+            android:layout_marginStart="2dp"
             android:hint="@string/search"
             android:inputType="text"
             android:maxLines="1"
