--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="dot_margin_start_end">5dp</dimen>
     <dimen name="search_placeholder_text">19sp</dimen>
     <dimen name="search_placeholder_margin_top">56dp</dimen>
+    <dimen name="search_input_line">36dp</dimen>
 </resources>
