--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -110,6 +110,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:fitsSystemWindows="true"
         android:orientation="vertical"
         app:layoutManager="LinearLayoutManager"
         android:layout_marginTop="@dimen/margin_top" />
