--- a/app/src/main/res/layout/track_card.xml
+++ b/app/src/main/res/layout/track_card.xml
@@ -37,7 +37,7 @@
             <TextView
                 android:id="@+id/track_owner_name"
                 style="@style/TrackTextStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/artist_name_width"
                 android:layout_height="wrap_content"
                 tools:text="Artist name"
                 android:textSize="@dimen/track_owner_time_size" />
@@ -54,7 +54,7 @@
             <TextView
                 android:id="@+id/track_time"
                 style="@style/TrackTextStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/artist_name_width"
                 android:layout_height="wrap_content"
                 tools:text="5:45"
                 android:textSize="@dimen/track_owner_time_size"/>
