--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -54,6 +54,7 @@
         <item name="android:textColor">@color/yp_white</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight" tools:targetApi="p">400</item>
+        <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
     </style>
 
@@ -61,6 +62,7 @@
         <item name="android:textColor">@color/yp_white</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight" tools:targetApi="p">400</item>
+        <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
     </style>
 
