--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,6 +48,7 @@
         <item name="android:textColor">@color/yp_grey</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight" tools:targetApi="p">400</item>
+        <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
     </style>
 
@@ -55,6 +56,7 @@
         <item name="android:textColor">@color/yp_black</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight" tools:targetApi="p">400</item>
+        <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
     </style>
 
