--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -8,35 +8,24 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="24dp"
         android:orientation="vertical">
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/left_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.05" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/right_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.95" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/mediaBackButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="46dp"
+            android:layout_height="50dp"
             android:gravity="center"
-            app:navigationIcon="@drawable/back_space"
+            android:paddingStart="@dimen/media_back_arrow_start_padding"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/back_space" />
 
         <ImageView
             android:id="@+id/trackImage"
-            android:layout_width="@dimen/media_player_image"
-            android:layout_height="@dimen/media_player_image"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="1:1"
             android:layout_marginTop="@dimen/media_track_image_margin_top"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +35,7 @@
         <TextView
             android:id="@+id/trackName"
             style="@style/MediaMainTextStyle"
-            android:layout_width="@dimen/media_text_width"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/media_text_height_28dp"
             android:layout_marginTop="@dimen/media_track_name_top_margin"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +49,7 @@
         <TextView
             android:id="@+id/artistName"
             style="@style/MediaMainTextStyle"
-            android:layout_width="@dimen/media_text_width"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/media_small_text_height_16dp"
             android:layout_marginTop="@dimen/media_margin_top_8dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,8 +67,7 @@
             android:layout_marginTop="@dimen/media_margin_top_48dp"
             android:background="@drawable/round_button"
             android:src="@drawable/add_to_playlist"
-            app:layout_constraintEnd_toStartOf="@id/play"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/artistName"
             app:layout_constraintTop_toBottomOf="@+id/artistName" />
 
         <ImageButton
@@ -97,12 +85,11 @@
             android:id="@+id/buttonLike"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/button_like"
             android:layout_marginTop="@dimen/media_margin_top_48dp"
             android:background="@drawable/round_button"
-            app:layout_constraintStart_toEndOf="@id/play"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/artistName"/>
+            android:src="@drawable/button_like"
+            app:layout_constraintEnd_toEndOf="@id/artistName"
+            app:layout_constraintTop_toBottomOf="@id/artistName" />
 
         <TextView
             android:id="@+id/timer"
@@ -122,8 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/media_text_height_28dp"
             android:layout_marginTop="@dimen/media_margin_top_24dp"
-            app:layout_constraintStart_toEndOf="@+id/left_guideline"
-            app:layout_constraintEnd_toStartOf="@+id/trackTime"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/timer"
             android:gravity="center_vertical|start"
             android:textSize="@dimen/media_text_size_13sp"
@@ -136,8 +122,7 @@
             android:layout_height="@dimen/media_text_height_28dp"
             app:layout_constraintHorizontal_weight="1"
             android:layout_marginTop="@dimen/media_margin_top_24dp"
-            app:layout_constraintStart_toEndOf="@+id/time"
-            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/timer"
             android:gravity="center_vertical|end"
             android:textSize="@dimen/media_text_size_13sp"
@@ -148,8 +133,7 @@
             style="@style/MediaTrackTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/media_text_height_28dp"
-            app:layout_constraintStart_toEndOf="@+id/left_guideline"
-            app:layout_constraintEnd_toStartOf="@+id/trackAlbum"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/trackTime"
             android:gravity="center_vertical|start"
             android:textSize="@dimen/media_text_size_13sp"
@@ -161,8 +145,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/media_text_height_28dp"
             app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/album"
-            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/trackTime"
             android:gravity="center_vertical|end"
             android:textSize="@dimen/media_text_size_13sp"
@@ -173,8 +156,7 @@
             style="@style/MediaTrackTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/media_text_height_28dp"
-            app:layout_constraintStart_toEndOf="@+id/left_guideline"
-            app:layout_constraintEnd_toStartOf="@+id/trackYear"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/album"
             android:gravity="center_vertical|start"
             android:textSize="@dimen/media_text_size_13sp"
@@ -186,8 +168,7 @@
             android:layout_width="0dp"
             app:layout_constraintHorizontal_weight="1"
             android:layout_height="@dimen/media_text_height_28dp"
-            app:layout_constraintStart_toEndOf="@+id/year"
-            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/album"
             android:gravity="center_vertical|end"
             android:textSize="@dimen/media_text_size_13sp"
@@ -198,8 +179,7 @@
             style="@style/MediaTrackTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/media_text_height_28dp"
-            app:layout_constraintStart_toEndOf="@+id/left_guideline"
-            app:layout_constraintEnd_toStartOf="@+id/trackGenre"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/trackYear"
             android:gravity="center_vertical|start"
             android:textSize="@dimen/media_text_size_13sp"
@@ -211,8 +191,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/media_text_height_28dp"
             app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/genre"
-            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/trackYear"
             android:gravity="center_vertical|end"
             android:textSize="@dimen/media_text_size_13sp"
@@ -223,8 +202,7 @@
             style="@style/MediaTrackTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/media_text_height_28dp"
-            app:layout_constraintStart_toEndOf="@+id/left_guideline"
-            app:layout_constraintEnd_toStartOf="@+id/trackCountry"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/trackGenre"
             android:gravity="center_vertical|start"
             android:textSize="@dimen/media_text_size_13sp"
@@ -236,8 +214,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/media_text_height_28dp"
             app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/country"
-            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/trackGenre"
             android:gravity="center_vertical|end"
             android:textSize="@dimen/media_text_size_13sp"
