--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="yp_grey">#AEAFB4</color>
     <color name="yp_white">#FFFFFF</color>
     <color name="yp_lightGrey">#E6E8EB</color>
+    <color name="primary_500">#6200EE</color>
 </resources>
