--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,4 +40,7 @@
     <dimen name="progress_bar_margin_top_140dp">140dp</dimen>
     <dimen name="progress_bar_size_44dp">44dp</dimen>
     <dimen name="search_height_52dp">52dp</dimen>
+    <dimen name="search_padding_start_12dp">12dp</dimen>
+    <dimen name="search_icon_padding_8dp">8dp</dimen>
+    <dimen name="media_back_arrow_start_padding">-20dp</dimen>
 </resources>
