--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -145,6 +145,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/media_text_height_28dp"
             app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@+id/album"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/trackTime"
             android:gravity="center_vertical|end"
